parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@class.py-6.snap
---
source: parser/src/lexer/lexer.rs
description: "@decor\nclass a: pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
[
    Token {
        kind: MatrixMul,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "decor",
        ),
        start: 1,
        end: 6,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 6,
        end: 7,
    },
    Token {
        kind: Class,
        value: None,
        start: 7,
        end: 12,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 13,
        end: 14,
    },
    Token {
        kind: Colon,
        value: None,
        start: 14,
        end: 15,
    },
    Token {
        kind: Pass,
        value: None,
        start: 16,
        end: 20,
    },
]
